# ldvelh

./: .gitignore  README.md  TODO  drop.sql  kg.sql  package.json  schema.sql
app/: config.py  globals.css  layout.js  page.js
app/api/: dependencies.py  routes.py
app/kg/: specialized_populator.py
app/schemas/: __init__.py  entities.py  extraction.py  relations.py  world_generation.py
app/services/: extraction_service.py  game_service.py  llm_service.py
backend/: Dockerfile  config.py  main.py  requirements.txt
backend/api/: __init__.py  routes.py  streaming.py  tooltips.py
backend/kg/: __init__.py  context_builder.py  populator.py  reader.py  specialized_populator.py
backend/prompts/: __init__.py  example_world_generation.json  extractor_prompt.py  extractor_prompts.py  narrator_prompt.py  shared.py  world_generation_prompt.py
backend/schema/: __init__.py  core.py  entities.py  extraction.py  narration.py  narrative.py  relations.py  synonyms.py  world_generation.py
backend/services/: __init__.py  context_builder.py  extraction_service.py  game_service.py  llm_service.py  state_normalizer.py
backend/utils/: __init__.py  json_utils.py  llm_output_normalizer.py
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  railway.json
frontend/app/: page.js  pyproject.toml
hooks/: useGameState.js  useStreaming.js  useTooltips.js
lib/: constants.js  contextBuilder.js  errors.js  faitsService.js  financeService.js  haikuService.js  interactionTracker.js  kgExtractor.js  kgService.js  prompt.js  sceneService.js  supabase.js
(+55 files in other folders)
